--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nile-store-directory-alt",
+  "name": "nile-store-directory",
   "version": "0.1.0",
   "private": true,
   "scripts": {
