--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "vue-cli-service serve",
+    "start": "node app",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -11,7 +11,9 @@
   "dependencies": {
     "buefy": "^0.7.4",
     "core-js": "^2.6.5",
+    "express": "^4.16.4",
     "node-sass": "^4.11.0",
+    "path": "^0.12.7",
     "sass-loader": "^7.1.0",
     "vue": "^2.6.10"
   },
